# ProtocolOps

./: .gitignore  EVALUATION_CHECKLIST.md  JUDGE_QUICKSTART.md  README.md  RESOURCE_ROUTING.md  SECURITY_AND_SECRETS.md  SUBMISSION_NOTES.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: db.py  schemas.py
backend/app/providers/: base.py  literature.py  protocols.py  utils.py
backend/app/seeds/: hela.py  presets.py  standards.py
backend/app/services/: comparison.py  consensus_adapter.py  domain_routing.py  evidence_pack.py  literature_qc.py  openai_client.py  pdf_export.py  plan_generation.py  quality.py  readiness.py  replay_cache.py  review_memory.py  reviews.py  run_events.py  run_metadata.py  source_router.py
backend/consensus_bridge/: __init__.py  main.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_consensus_bridge.py  test_database.py  test_evidence_pack.py  test_live_integration.py  test_resource_routing.py  test_review_memory.py  test_run_metadata.py  test_schemas.py  test_tavily_client.py
docs/: 02_ARCHITECTURE.md  05_API_REFERENCE.md  06_LOCAL_SETUP_AND_LIVE_MODE.md  08_SCIENTIST_REVIEW_LOOP.md  README.md  openapi.json  videos.html
docs/diagrams/: README.md  api_map.puml  architecture.puml  database_model.puml  evidence_modes.puml  evidence_pack_sequence.puml  evidence_trust_model.puml  provider_routing.puml  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+19 files in other folders)
