[project]
name = "ai-scientist-backend"
version = "0.1.0"
description = "FastAPI backend for evidence-grounded experiment planning."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.100.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

